--- a/index.html
+++ b/index.html
@@ -11,7 +11,17 @@
 		<div class="container">
             <!--<h1>Assignment 5</h1>-->
 			<div class="canvas" id="map">
-			</div>
+				<div class="custom-tooltip">
+					                    <h2 id="type"></h2>
+					                    <p>HH Income: <span id="HHincome"></span></p>
+					                </div>
+			</div><div class="canvas" id="map">
+			<div class="custom-tooltip">
+				                    <h2 id="type"></h2>
+				                    <p>Hood: <span id="hood"></span></p>
+				                    <p>HH Income: <span id="HHincome"></span></p>
+				                </div>
+		</div>
 		</div><!--.container-->
 
 
